ipc/ipdl/test/ipdl/error/tooWeakIntrSync.ipdl
sync protocol tooWeakIntrSync {

    // it's an error to declare a sync protocol with an interrupt message
parent:
  intr Msg();
};
